# ssx3-ui-research

./: CMakeLists.txt
hexpat/: lui.hexpat  lui_screen.hexpat
src/: hashname_tool.cpp  main.cpp  screendump_tool.cpp
src/core/: file.hpp  gfxtypes.hpp  hashname.cpp  hashname.hpp  mmap_file.cpp  mmap_file.hpp  offsetptr.hpp  refpack.cpp  refpack.hpp  stringprintf.cpp  stringprintf.hpp  types.hpp
src/core/sdl/: surface.hpp  texture.hpp  window.cpp  window.hpp
src/lui/structs/: common.hpp  lui_file.hpp  screen.hpp
src/player/: CMakeLists.txt  main.cpp
